[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
]

build-backend = "setuptools.build_meta"

[project]
name = "audioprobe"
version = "0.1.0"
description = "A Python library with a native C++ extension for libavformat that provides a simple interface to probe audio files"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Jacek Duszenko", email = "jacek@elevenlabs.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video"
]
dependencies = [
    "pydantic==2.10.6",
    "pybind11>=2.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/JacekDuszenko/audioprobe"
"Bug Tracker" = "https://github.com/JacekDuszenko/audioprobe/issues"

[tool.pytest]
testpaths = ["tests"]